--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,8 @@ website:
             href: "Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02.html"
           - text: "Hands-on Exercise 3"
             href: "Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.html"
+          - text: "Hands-on Exercise 5"
+            href: "Hands-on_Ex/Hands-on_Ex05/Hands-on_Ex05.html"
       - text: "In-class Exercise"
         menu: 
           - text: "In-class Exercise 1"
@@ -21,6 +23,8 @@ website:
             href: "In-class_Ex/In-class_Ex02/In-class_Ex02.html"
           - text: "In-class Exercise 3"
             href: "In-class_Ex/In-class_Ex03/In-class_Ex03.html"
+          - text: "In-class Exercise 4"
+            href: "In-class_Ex/In-class_Ex04/In-class_Ex04.html"
     right:
       - href: index.qmd
         text: Home
