--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,6 +21,8 @@ website:
             href: "Hands-on_Ex/Hands-on_Ex07/Hands-on_Ex07.html"
           - text: "Hands-on Exercise 8"
             href: "Hands-on_Ex/Hands-on_Ex08/Hands-on_Ex08.html"
+          - text: "Hands-on Exercise 9"
+            href: "Hands-on_Ex/Hands-on_Ex08/Hands-on_Ex08.html"
       - text: "In-class Exercise"
         menu: 
           - text: "In-class Exercise 1"
@@ -37,6 +39,10 @@ website:
             href: "In-class_Ex/In-class_Ex06/In-class_Ex06.html"
           - text: "In-class Exercise 9"
             href: "In-class_Ex/In-class_Ex09/In-class_Ex09.html"
+          - text: "In-class Exercise 10"
+            href: "In-class_Ex/In-class_Ex10/In-class_Ex10.html"
+          - text: "In-class Exercise 11"
+            href: "In-class_Ex/In-class_Ex11/In-class_Ex11.html"
       - text: "Take-home Exercise"
         menu: 
           - text: "Take-home Exercise 1"
